--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
 streamlit
 pandas
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pandas>=1.3.0
+numpy>=1.21.0
+yfinance>=0.1.63
+scikit-learn>=0.24.2
+ta-lib>=0.4.24
+modal-client>=0.49.0
+streamlit>=1.2.0
+python-dotenv>=0.19.0
+requests>=2.26.0
+plotly>=5.3.1
+pytest>=6.2.5
+black>=21.9b0
+flake8>=3.9.2
